--- a/apps/node-hello-world/base/deployment.yaml
+++ b/apps/node-hello-world/base/deployment.yaml
@@ -17,3 +17,6 @@ spec:
           image: medeiser/node-hello-world:REPLACEME
           ports:
             - containerPort: 8080
+          env:
+            - name: ENV_NODE
+              value: REPLACEME
