--- a/apps/node-hello-world/overlays/test/kustomization.yaml
+++ b/apps/node-hello-world/overlays/test/kustomization.yaml
@@ -6,4 +6,9 @@ bases:
 
 images:                       
 - name: medeiser/node-hello-world
-  newTag: '2'
+  newTag: '3'
+
+configMapGenerator:
+  - name: node-hello-world-config-test
+    files:
+      - ../../config/test.yaml
