--- a/apps/node-hello-world/overlays/test/kustomization.yaml
+++ b/apps/node-hello-world/overlays/test/kustomization.yaml
@@ -11,4 +11,4 @@ images:
 configMapGenerator:
   - name: node-hello-world-config-test
     files:
-      - ../../config/test.yaml
+      - config/test.yaml
