--- a/apps/node-hello-world/overlays/test/kustomization.yaml
+++ b/apps/node-hello-world/overlays/test/kustomization.yaml
@@ -9,6 +9,9 @@ images:
   newTag: '3'
 
 configMapGenerator:
-  - name: node-hello-world-config-test
+  - name: node-hello-world-env
+    literals:
+      - NODE_ENV="test"
+  - name: node-hello-world-config
     files:
       - config/test.yaml
