--- a/apps/node-hello-world/base/deployment.yaml
+++ b/apps/node-hello-world/base/deployment.yaml
@@ -23,3 +23,10 @@ spec:
                 configMapKeyRef:
                   name: node-hello-world-env
                   key: NODE_ENV
+          volumeMounts:
+            - name: config-volume
+              mountPath: /usr/src/app/config
+      volumes:
+        - name: config-volume
+          configMap:
+            name: node-hello-world-config
