added default config

--- a/apps/node-hello-world/overlays/test/kustomization.yaml
+++ b/apps/node-hello-world/overlays/test/kustomization.yaml
@@ -13,5 +13,6 @@ configMapGenerator:
     literals:
       - NODE_ENV="test"
   - name: node-hello-world-config
+    behavior: merge
     files:
       - config/test.yaml
