--- a/apps/node-hello-world/base/deployment.yaml
+++ b/apps/node-hello-world/base/deployment.yaml
@@ -24,9 +24,14 @@ spec:
                   name: node-hello-world-env
                   key: NODE_ENV
           volumeMounts:
+            - name: default-config-volume
+              mountPath: /usr/src/app/config
             - name: config-volume
               mountPath: /usr/src/app/config
       volumes:
         - name: config-volume
           configMap:
             name: node-hello-world-config
+        - name: default-config-volume
+          configMap:
+            name: default-config
