--- a/apps/node-hello-world/overlays/dev/kustomization.yaml
+++ b/apps/node-hello-world/overlays/dev/kustomization.yaml
@@ -13,7 +13,7 @@ configMapGenerator:
   - name: node-hello-world-env
     literals:
       - NODE_ENV="dev"
-  # - name: node-hello-world-config
-  #   files:
-  #     - config/dev.yaml
+  - name: node-hello-world-config
+    files:
+      - config/dev.yaml
       
