--- a/apps/node-hello-world/base/deployment.yaml
+++ b/apps/node-hello-world/base/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           volumeMounts:
             # - name: config-volume
             #   mountPath: /usr/src/app/config
-            - name: common-config-colume
+            - name: common-config-volume
               mountPath: /usr/src/app/config
       volumes:
         - name: config-volume
