--- a/apps/node-hello-world/base/deployment.yaml
+++ b/apps/node-hello-world/base/deployment.yaml
@@ -7,6 +7,7 @@ spec:
   selector:
     matchLabels:
       app: node-hello-world
+  revisionHistoryLimit: 2
   template:
     metadata:
       labels:
