--- a/apps/node-hello-world/base/deployment.yaml
+++ b/apps/node-hello-world/base/deployment.yaml
@@ -28,9 +28,9 @@ spec:
             - name: config-volume
               mountPath: /usr/src/app/config
               subPathExpr: $(NODE_ENV).yaml
-            - name: common-config-volume
-              mountPath: /usr/src/app/config
-              subPathExpr: $common-$(NODE_ENV).yaml
+            # - name: common-config-volume
+            #   mountPath: /usr/src/app/config
+            #   subPathExpr: $common-$(NODE_ENV).yaml
       volumes:
         - name: config-volume
           configMap:
